// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage should be rendered correctly 1`] = `
.c0 {
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  background-image: url();
  width: 100%;
  height: 500px;
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  -webkit-filter: blur(5px);
  filter: blur(5px);
  background-size: 100% 400px;
}

<div
  className="c0"
  height={500}
/>
`;

exports[`Header should be rendered correctly for main page  1`] = `
<styled.div
  height={400}
>
  <styled.div>
    <Logo />
  </styled.div>
  <styled.div
    height={400}
  />
  <HeaderContentSearch
    height={400}
  />
</styled.div>
`;

exports[`Header should be rendered correctly for movie page  1`] = `
<styled.div
  height={600}
>
  <styled.div>
    <Logo />
  </styled.div>
  <styled.div
    height={600}
  />
  <HeaderContentMovie
    height={600}
  />
</styled.div>
`;

exports[`HeaderStyled should be rendered correctly 1`] = `
.c0 {
  width: 100%;
  height: px;
}

<div
  className="c0"
/>
`;

exports[`LogoContainer should be rendered correctly 1`] = `
.c0 {
  position: absolute;
  top: 40px;
  left: 60px;
  z-index: 9999;
}

<div
  className="c0"
/>
`;
